--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,9 @@ runtime: python
 vm: true
 entrypoint: gunicorn -b :$PORT project_name.wsgi
 runtime_config:
-  python_version: 2
+  python_version: 3
+
+service: py3-flexible
 
 instance_class: F1
 
